# CodeLens_AI-Semantic_Reasoning_for_Modern_Codebases

./: .ai_doc_cache.json  .gitignore  FIXES_APPLIED.md  README.md  app.py  pyproject.toml  requirements.txt  setup.cfg
ai_doc_layer/: ask_cli.py  cache.py  call_graph.py  cli.py  code_parser.py  config.py  diff_analyzer.py  doc_generator.py  impact_analyzer.py  llm_client.py  ollama_client.py  search_index.py  uml_generator.py  validation.py  visualizer.py  writer.py
