[metadata]
name = codelens-ai
version = 0.1.0
description = AI-powered semantic code impact analyzer with call-graph analysis and LLM reasoning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/prashanth-31/CodeLens_AI-Semantic_Reasoning_for_Modern_Codebases
author = CodeLens AI Team
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.8
install_requires =
    click
    GitPython>=3.1.40
    astor
    python-dotenv
    requests
    streamlit>=1.28.0
    torch
    transformers
    scikit-learn
    pydot
    graphviz

[options.entry_points]
console_scripts =
    codelens = ai_doc_layer.cli:main
    codelens-ask = ai_doc_layer.ask_cli:main

[options.extras_require]
dev =
    pytest>=7.0
    black>=23.0
    flake8>=6.0
    mypy>=1.0

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist,.eggs
ignore = E203,W503
